--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
-.App {
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
+body {
+  font-family: poppins;
+}
+
+h1,
+h2,
+h3 {
+  color: #0f3057;
+  font-weight: bolder;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  line-height: 3;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.weather-app-wrapper {
+  max-width: 800px;
+  margin: 20px auto 40px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.weather-app {
+  border: 1.5px solid #0f3057;
+  border-radius: 10px;
+  margin: 30px auto;
+  padding: 50px;
+  max-width: 800px;
+  background-image: url(https://images.creativemarket.com/0.1.0/ps/5272950/910/628/m2/fpnw/wm0/sunset-colors-%281%29-.jpg?1540691231&s=40e82e11ce05541d9382dd5c8a8b9fa1);
+  background-size: 1600px;
 }
 
-.App-link {
-  color: #61dafb;
+form .form-control:focus {
+  border-color: #0f3057;
+  box-shadow: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-control {
+  border: none;
+  border: 1.5px solid #0f3057;
+  border-radius: 4px;
+}
+
+.today {
+  margin: 40px 50px;
+  font-size: 20px;
+  color: #0f3057;
+  text-align: center;
+}
+
+.hour-forecast-icon {
+  width: 90%;
+}
+
+.day-1 {
+  border: 1.5px solid #00587a;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: center;
+  font-size: 17px;
+  color: #0f3057;
+}
+
+.day-2 {
+  border-top: 1.5px solid #00587a;
+  border-bottom: 1.5px solid #00587a;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: center;
+  font-size: 17px;
+  color: #0f3057;
+}
+
+.day-3 {
+  border-top: 1.5px solid #00587a;
+  border-bottom: 1.5px solid #00587a;
+  border-right: 1.5px solid #00587a;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: center;
+  font-size: 17px;
+  color: #0f3057;
+}
+
+.daily-forecast-icon {
+  width: 70%;
 }
