--- a/src/Search.css
+++ b/src/Search.css
@@ -1,3 +1,24 @@
+form .form-control:focus {
+  border-color: #0f3057;
+  box-shadow: none;
+}
+
+.form-control {
+  border: none;
+  border: 1.5px solid #0f3057;
+  border-radius: 4px;
+}
+
+.search-box {
+  padding-right: 0;
+  margin-left: auto;
+}
+
+.submit-box {
+  padding-left: 0;
+  margin-right: 50px;
+}
+
 .current-location-button {
   display: inline-block;
   color: white;
