--- a/src/Search.css
+++ b/src/Search.css
@@ -1,22 +1,27 @@
-form .form-control:focus {
-  border-color: #0f3057;
-  box-shadow: none;
-}
-
-.form-control {
-  border: none;
+form {
+  display: inline;
+  background-color: white;
   border: 1.5px solid #0f3057;
   border-radius: 4px;
+  padding: 5px 15px 5px 5px;
+}
+
+form .form-control:focus {
+  outline: none;
 }
 
 .search-box {
-  padding-right: 0;
-  margin-left: auto;
+  border: none;
 }
 
 .submit-box {
-  padding-left: 0;
-  margin-right: 50px;
+  background-color: white;
+  border: none;
+  padding-left: 140px;
+}
+
+.submit-box:hover {
+  cursor: pointer;
 }
 
 .current-location-button {
@@ -29,6 +34,7 @@ form .form-control:focus {
   background-color: #0f3057;
   border: 1px solid transparent;
   padding: 8px 12px;
+  margin-left: 150px;
   font-size: 15px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
   text-decoration: none;
