--- a/src/SearchWeather.css
+++ b/src/SearchWeather.css
@@ -1,23 +1,30 @@
-form {
+.Search form {
   display: inline;
   background-color: white;
   border: 1.5px solid #0f3057;
   border-radius: 4px;
-  padding: 5px 15px 5px 5px;
+  padding: 5px 15px 5px 10px;
+  margin-left: 20px;
 }
 
-form .form-control:focus {
+.Search form .form-control:focus {
   outline: none;
+}
+
+[type="search"]::-webkit-search-cancel-button,
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+  appearance: none;
 }
 
 .search-box {
   border: none;
+  padding-right: 140px;
 }
 
 .submit-box {
   background-color: white;
   border: none;
-  padding-left: 140px;
 }
 
 .submit-box:hover {
@@ -28,13 +35,14 @@ form .form-control:focus {
   display: inline-block;
   color: white;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.4;
   text-align: center;
-  border-radius: 30px;
+  border-radius: 4px;
   background-color: #0f3057;
   border: 1px solid transparent;
-  padding: 8px 12px;
-  margin-left: 150px;
+  padding: 5px 15px;
+  margin-top: 10px;
+  margin-left: 160px;
   font-size: 15px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
   text-decoration: none;
@@ -46,4 +54,24 @@ form .form-control:focus {
   background-color: #00587a;
   border: 1px solid transparent;
   cursor: pointer;
+}
+
+.weather h1 {
+  font-size: 30px;
+  margin: 80px 0 20px 0;
+}
+
+.weather h2 {
+  font-size: 20px;
+  line-height: normal;
+}
+
+.weather h3 {
+  font-size: 30px;
+  margin: 60px 0 20px 0;
+}
+
+.temperature {
+  color: #ffe3de;
+  font-size: 50px;
 }
