--- a/src/SearchWeather.css
+++ b/src/SearchWeather.css
@@ -4,24 +4,18 @@ form {
   border-radius: 4px;
 }
 
+form .form-control{
+  border: none;
+}
+
 form .form-control:focus {
   outline: none;
-}
-
-[type="search"]::-webkit-search-cancel-button,
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-  appearance: none;
-}
-
-.search-box {
-  border: none;
 }
 
 .submit-box {
   background-color: white;
   border: none;
-  margin-left: 100px;
+  margin-left: 90px;
 }
 
 .submit-box:hover {
