--- a/src/App.css
+++ b/src/App.css
@@ -4,24 +4,22 @@ h1,
 h2,
 h3 {
   color: #0f3057;
-  font-weight: bolder;
 }
 
-a {
+footer {
+  margin: 10px;
+}
+.App a {
   text-decoration: none;
   color: blue;
-}
-
-a:hover {
-  color: lightcoral;
 }
 
 .App {
   border: 1.5px solid #0f3057;
   border-radius: 10px;
-  padding: 50px;
+  padding: 50px 50px 70px 50px;
   max-width: 800px;
-  background-color: #00ad9f;
+  background: linear-gradient(30deg, #00ad9f, turquoise, orange, orange);
   background-size: 1600px;
 }
 
