--- a/src/WeatherInfo.css
+++ b/src/WeatherInfo.css
@@ -67,7 +67,7 @@ span.weatherDescription {
 
 .sunTime {
   text-align: center;
-  color: #ff8c00;
+  color: #ea6e4b;
   font-size: 17px;
   font-weight: bolder;
   margin-top: 30px;
