--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ footer {
   border-radius: 10px;
   padding: 50px 50px 70px 50px;
   max-width: 800px;
-  background: linear-gradient(30deg, #00ad9f, turquoise, orange, orange);
+  background: linear-gradient(40deg, #00ad9f, turquoise, #f48024, #f48024);
   background-size: 1600px;
 }
 
