--- a/src/SearchWeather.css
+++ b/src/SearchWeather.css
@@ -4,7 +4,7 @@ form {
   border-radius: 4px;
 }
 
-@media (max-height: 500px) {
+@media (max-width: 768px) {
   form {
     width: 200px;
     height: 30px;
@@ -19,9 +19,9 @@ form .form-control:focus {
   outline: none;
 }
 
-@media (max-height: 500px) {
+@media (max-width: 768px) {
   form .form-control {
-    height: 20px;
+    height: 25px;
     font-size: 10px;
   }
 }
@@ -30,13 +30,20 @@ form .form-control:focus {
   color: #0f3057;
 }
 
+@media (max-width: 768px) {
+  svg {
+    max-width: 300%;
+    height: auto;
+  }
+}
+
 .submit-box {
   background-color: white;
   border: none;
   margin-left: 90px;
 }
 
-@media (max-height: 500px) {
+@media (max-width: 768px) {
   .submit-box {
     margin-left: 30px;
     background-color: none;
@@ -65,7 +72,7 @@ form .form-control:focus {
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-@media (max-height: 500px) {
+@media (max-width: 768px) {
   .current-location-button {
     font-size: 10px;
     padding: none;
